; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ata/extr_ata-sata.c_ata_sata_scr_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ata/extr_ata-sata.c_ata_sata_scr_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ata_channel = type { %struct.TYPE_4__*, i32, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i64 }
%struct.TYPE_3__ = type { i32 (i32, i32, i32, i32*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ata_sata_scr_read(%struct.ata_channel* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.ata_channel*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store %struct.ata_channel* %0, %struct.ata_channel** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %10 = load %struct.ata_channel*, %struct.ata_channel** %6, align 8
  %11 = getelementptr inbounds %struct.ata_channel, %struct.ata_channel* %10, i32 0, i32 2
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32 (i32, i32, i32, i32*)*, i32 (i32, i32, i32, i32*)** %12, align 8
  %14 = icmp ne i32 (i32, i32, i32, i32*)* %13, null
  br i1 %14, label %15, label %27

15:                                               ; preds = %4
  %16 = load %struct.ata_channel*, %struct.ata_channel** %6, align 8
  %17 = getelementptr inbounds %struct.ata_channel, %struct.ata_channel* %16, i32 0, i32 2
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32 (i32, i32, i32, i32*)*, i32 (i32, i32, i32, i32*)** %18, align 8
  %20 = load %struct.ata_channel*, %struct.ata_channel** %6, align 8
  %21 = getelementptr inbounds %struct.ata_channel, %struct.ata_channel* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = load i32*, i32** %9, align 8
  %26 = call i32 %19(i32 %22, i32 %23, i32 %24, i32* %25)
  store i32 %26, i32* %5, align 4
  br label %43

27:                                               ; preds = %4
  %28 = load %struct.ata_channel*, %struct.ata_channel** %6, align 8
  %29 = getelementptr inbounds %struct.ata_channel, %struct.ata_channel* %28, i32 0, i32 0
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %29, align 8
  %31 = load i32, i32* %8, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i64 %32
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %42

37:                                               ; preds = %27
  %38 = load %struct.ata_channel*, %struct.ata_channel** %6, align 8
  %39 = load i32, i32* %8, align 4
  %40 = call i32 @ATA_IDX_INL(%struct.ata_channel* %38, i32 %39)
  %41 = load i32*, i32** %9, align 8
  store i32 %40, i32* %41, align 4
  store i32 0, i32* %5, align 4
  br label %43

42:                                               ; preds = %27
  store i32 -1, i32* %5, align 4
  br label %43

43:                                               ; preds = %42, %37, %15
  %44 = load i32, i32* %5, align 4
  ret i32 %44
}

declare dso_local i32 @ATA_IDX_INL(%struct.ata_channel*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
